[package]
name = "amscircuit"
version = "0.1.0"
authors = ["Pepijn de Vos <pepijndevos@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vhdl_lang = "0.17.0"
handlebars = "3.5.4"
serde = { version = "1.0", features = ["derive"] }